--- a/mysql/start-5.7
+++ b/mysql/start-5.7
@@ -1,7 +1,16 @@
 #!/bin/bash
 
 DATADIR=$(cd $(dirname $0) && pwd -P)/data-5.7
+NAME=mysql57
 
 mkdir -p $DATADIR
 
-docker run -d --name mysql57 -v $DATADIR:/var/lib/mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root mysql:5.7
+if [[ $(docker ps -aq --filter name=$NAME --filter status=running) != "" ]]; then
+  echo "Container $NAME is already running."
+elif [[ $(docker ps -aq --filter name=$NAME --filter status=exited) != "" ]]; then
+  echo "Starting container $NAME ..."
+  docker start $NAME
+else
+  echo "Creating and starting container $NAME ..."
+  docker run -d --name $NAME -v $DATADIR:/var/lib/mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root mysql:5.7
+fi
